Backport expression scheme to beta5