@@ -113,7 +113,6 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -156,6 +155,7 @@ public class CommonUtil {
     public static final String BALLERINA_CMD;
 
     public static final String URI_SCHEME_BALA = "bala";
+    public static final String URI_SCHEME_EXPR = "expr";
     public static final String URI_SCHEME_FILE = "file";
     public static final String LANGUAGE_ID_BALLERINA = "ballerina";
 
@@ -164,6 +164,8 @@ public class CommonUtil {
     public static final String BALLERINA_ORG_NAME = "ballerina";
 
     public static final String SDK_VERSION = System.getProperty("ballerina.version");
+
+    public static final String EXPR_SCHEME = "expr";
 
     public static final List<String> PRE_DECLARED_LANG_LIBS = Arrays.asList("lang.boolean", "lang.decimal",
             "lang.error", "lang.float", "lang.future", "lang.int", "lang.map", "lang.object", "lang.stream",
@@ -397,7 +399,7 @@ public class CommonUtil {
             default:
                 return getDefaultValueForTypeDescKind(typeKind);
         }
-        
+
         return Optional.of(typeString);
     }
 
@@ -1085,38 +1087,23 @@ public class CommonUtil {
     }
 
     /**
-     * Node comparator to compare the nodes by position.
-     */
-    public static class BLangNodeComparator implements Comparator<BLangNode> {
-
-        /**
-         * {@inheritDoc}
-         */
-        @Override
-        public int compare(BLangNode node1, BLangNode node2) {
-            // TODO: Fix?
-            Location node1Loc = node1.getPosition();
-            Location node2Loc = node2.getPosition();
-            if (node1Loc == null || node2Loc == null) {
-                return -1;
-            }
-            return node1Loc.lineRange().startLine().line() - node2Loc.lineRange().startLine().line();
-        }
-    }
-
-    /**
-     * Get the path from given string URI.
+     * Get the path from given string URI. Even if the given URI's scheme is expr, we convert it to file scheme and
+     * provide a valid Path
      *
      * @param uri file uri
      * @return {@link Optional} Path from the URI
      */
     public static Optional<Path> getPathFromURI(String uri) {
-        try {
-            return Optional.of(Paths.get(new URL(uri).toURI()));
-        } catch (URISyntaxException | MalformedURLException e) {
-            // ignore
+        URI fileUri = URI.create(uri);
+        if (fileUri.getScheme().equals(EXPR_SCHEME)) {
+            String newUri = fileUri.toString().replace(EXPR_SCHEME + ":", "file:");
+            try {
+                return Optional.of(Paths.get(new URL(newUri).toURI()));
+            } catch (URISyntaxException | MalformedURLException e) {
+                return Optional.empty();
+            }
         }
-        return Optional.empty();
+        return Optional.of(Paths.get(fileUri));
     }
 
     /**
